Add form buttons, modify table and data

--- a/.github/workflows/codesniffer-actions.yml
+++ b/.github/workflows/codesniffer-actions.yml
@@ -1,6 +1,10 @@
 name: Code Sniffer Action
 run-name: Code Sniffer Testing Action
-on: [pull_request]
+on:
+  pull_request:
+    branches:
+      - main
+      - develop
 jobs:
   Code-Sniffer-Action:
     runs-on: ubuntu-latest
