Update save, add email sending, add translation and update github action

--- a/.github/workflows/codesniffer-actions.yml
+++ b/.github/workflows/codesniffer-actions.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - main
       - develop
+  push:
+    branches:
+      - main
+      - develop
 jobs:
   Code-Sniffer-Action:
     runs-on: ubuntu-latest
